# MCEngine

./: .gitignore  LICENSE  README.md  settings.gradle
app/src/main/jni/loader/: Actor.cpp  CMakeLists.txt  IDPool.cpp  IDPool.hpp  Item.cpp  ItemBridge.cpp  ItemInstance.cpp  JniToNative.hpp  NativeClass.cpp  NativeClass.hpp  main.cpp
app/src/main/jni/loader/bridges/: ItemBridge.hpp  QuickJSBridge.hpp  UsefulToolBridge.hpp
app/src/main/jni/loader/headers/: Fake_Actor.hpp  Fake_Block.hpp  Fake_BlockGraphics.hpp  Fake_BlockLegacy.hpp  Fake_BlockSource.hpp  Fake_BlockTypeRegistry.hpp  Fake_HashedString.h  Fake_Item.h  Fake_Item.hpp  Fake_ItemInstance.hpp  Fake_ItemRegistry.h  Fake_ItemRegistry.hpp  Fake_ItemStack.hpp  Fake_ItemStackBase.hpp  Fake_Json_Value.h  Fake_Json_Value.hpp  Fake_Material.hpp  Fake_VanillaBlockTypes.hpp  Fake_VanillaItems.h  Fake_VanillaItems.hpp  NC_Items.cpp  NC_items.hpp  Other.hpp  fake_FoodItemComponentLegacy.h
app/src/main/jni/loader/includes/: NCHookFR.cpp  NCHookFR.h  Unzip.cpp
app/src/main/jni/loader/instances/: ActorFaker.cpp  BlockFaker.cpp  BlockGraphicsFaker.cpp  BlockLegacyFaker.cpp  BlockTypeRegistryFaker.cpp  Fake_Actor.cpp  Fake_Block.cpp  Fake_BlockGraphics.cpp  Fake_BlockLegacy.cpp  Fake_BlockTypeRegistry.cpp  Fake_HashedString.cpp  Fake_Item.cpp  Fake_ItemRegistry.cpp  Fake_Json_Value.cpp  Fake_Material.cpp  Fake_VanillaBlockTypes.cpp  Fake_VanillaItems.cpp  HashedStringFaker.cpp  ItemFaker.cpp  ItemRegistryFaker.cpp  Json_ValueFaker.cpp  MaterialFaker.cpp  Other.cpp  VanillaBlockTypesFaker.cpp  VanillaItemsFaker.cpp  (+1 more)
(+185 files in other folders)
